return arrays if arrays given SERVER-3661