bson/bsonobj.h
@@ -254,6 +254,11 @@ namespace mongo {
 
         BSONElement getFieldUsingIndexNames(const char *fieldName, const BSONObj &indexKey) const;
 
+        /** arrays are bson objects with numeric and increasing field names
+            @return true if field names are numeric and increasing
+         */
+        bool couldBeArray() const;
+
         /** @return the raw data of the object */
         const char *objdata() const {
             return _objdata;
